<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.fungorn.audio.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="org.fungorn.audio.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_author" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="org.fungorn.audio.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_album" />
</navigation>