<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:orientation="vertical"
    app:layoutDescription="@xml/motion_scene_main"
    app:showPaths="false"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_buy_button"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="8dp"
        android:elevation="4dp"
        android:padding="8dp"
        android:paddingEnd="16dp"
        android:text="@string/my_profile_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toTopOf="@id/profile_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/profile_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/artistsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/artists_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/authorsList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/artistsText"
        app:layout_constraintTop_toBottomOf="@id/artistsText"
        tools:itemCount="7" />

    <TextView
        android:id="@+id/albumsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/albums_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorsList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/artistsText"
        app:layout_constraintTop_toBottomOf="@id/albumsText"
        tools:itemCount="7" />

    <TextView
        android:id="@+id/genresText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="Genres"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumsList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genresList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/artistsText"
        app:layout_constraintTop_toBottomOf="@id/genresText"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="7" />

</androidx.constraintlayout.motion.widget.MotionLayout><!--</androidx.constraintlayout.motion.widget.MotionLayout>-->